--- a/Detached/Mirror.Components.csproj
+++ b/Detached/Mirror.Components.csproj
@@ -53,41 +53,41 @@
     <UnityVersion>2020.3.38f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
+    <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Mirror\Components\AssemblyInfo.cs" />
     <Compile Include="Assets\Mirror\Components\InterestManagement\Team\NetworkTeam.cs" />
     <Compile Include="Assets\Mirror\Components\NetworkTransform2k\NetworkTransformChild.cs" />
     <Compile Include="Assets\Mirror\Components\Discovery\NetworkDiscoveryHUD.cs" />
     <Compile Include="Assets\Mirror\Components\NetworkLobbyPlayer.cs" />
-    <Compile Include="Assets\Mirror\Components\NetworkTransform2k\NetworkTransform.cs" />
-    <Compile Include="Assets\Mirror\Components\NetworkRoomPlayer.cs" />
-    <Compile Include="Assets\Mirror\Components\InterestManagement\Match\NetworkMatch.cs" />
-    <Compile Include="Assets\Mirror\Components\NetworkPingDisplay.cs" />
     <Compile Include="Assets\Mirror\Components\NetworkTransform2k\NetworkTransformBase.cs" />
-    <Compile Include="Assets\Mirror\Components\Discovery\ServerRequest.cs" />
     <Compile Include="Assets\Mirror\Components\Experimental\NetworkTransformChild.cs" />
-    <Compile Include="Assets\Mirror\Components\Experimental\NetworkRigidbody2D.cs" />
-    <Compile Include="Assets\Mirror\Components\Experimental\NetworkTransformBase.cs" />
-    <Compile Include="Assets\Mirror\Components\Experimental\NetworkTransform.cs" />
     <Compile Include="Assets\Mirror\Components\NetworkStatistics.cs" />
-    <Compile Include="Assets\Mirror\Components\Experimental\NetworkLerpRigidbody.cs" />
-    <Compile Include="Assets\Mirror\Components\InterestManagement\Team\TeamInterestManagement.cs" />
-    <Compile Include="Assets\Mirror\Components\InterestManagement\Scene\SceneInterestManagement.cs" />
-    <Compile Include="Assets\Mirror\Components\NetworkLobbyManager.cs" />
-    <Compile Include="Assets\Mirror\Components\NetworkRoomManager.cs" />
-    <Compile Include="Assets\Mirror\Components\Experimental\NetworkRigidbody.cs" />
     <Compile Include="Assets\Mirror\Components\InterestManagement\SpatialHashing\Grid2D.cs" />
     <Compile Include="Assets\Mirror\Components\Discovery\NetworkDiscoveryBase.cs" />
-    <Compile Include="Assets\Mirror\Components\NetworkAnimator.cs" />
-    <Compile Include="Assets\Mirror\Components\InterestManagement\Distance\DistanceInterestManagement.cs" />
-    <Compile Include="Assets\Mirror\Components\Discovery\ServerResponse.cs" />
+    <Compile Include="Assets\Mirror\Components\InterestManagement\Match\NetworkMatch.cs" />
+    <Compile Include="Assets\Mirror\Components\Discovery\ServerRequest.cs" />
+    <Compile Include="Assets\Mirror\Components\Experimental\NetworkTransformBase.cs" />
+    <Compile Include="Assets\Mirror\Components\Experimental\NetworkLerpRigidbody.cs" />
+    <Compile Include="Assets\Mirror\Components\InterestManagement\Team\TeamInterestManagement.cs" />
+    <Compile Include="Assets\Mirror\Components\NetworkLobbyManager.cs" />
     <Compile Include="Assets\Mirror\Components\InterestManagement\Match\MatchInterestManagement.cs" />
-    <Compile Include="Assets\Mirror\Components\NetworkTransform2k\NetworkTransformSnapshot.cs" />
     <Compile Include="Assets\Mirror\Components\InterestManagement\Distance\DistanceInterestManagementCustomRange.cs" />
     <Compile Include="Assets\Mirror\Components\Discovery\NetworkDiscovery.cs" />
+    <Compile Include="Assets\Mirror\Components\Experimental\NetworkTransform.cs" />
+    <Compile Include="Assets\Mirror\Components\InterestManagement\Scene\SceneInterestManagement.cs" />
+    <Compile Include="Assets\Mirror\Components\InterestManagement\Distance\DistanceInterestManagement.cs" />
+    <Compile Include="Assets\Mirror\Components\Discovery\ServerResponse.cs" />
+    <Compile Include="Assets\Mirror\Components\NetworkTransform2k\NetworkTransformSnapshot.cs" />
     <Compile Include="Assets\Mirror\Components\GUIConsole.cs" />
+    <Compile Include="Assets\Mirror\Components\AssemblyInfo.cs" />
+    <Compile Include="Assets\Mirror\Components\NetworkTransform2k\NetworkTransform.cs" />
+    <Compile Include="Assets\Mirror\Components\NetworkRoomPlayer.cs" />
+    <Compile Include="Assets\Mirror\Components\NetworkPingDisplay.cs" />
+    <Compile Include="Assets\Mirror\Components\Experimental\NetworkRigidbody2D.cs" />
+    <Compile Include="Assets\Mirror\Components\NetworkRoomManager.cs" />
+    <Compile Include="Assets\Mirror\Components\Experimental\NetworkRigidbody.cs" />
+    <Compile Include="Assets\Mirror\Components\NetworkAnimator.cs" />
     <Compile Include="Assets\Mirror\Components\InterestManagement\SpatialHashing\SpatialHashingInterestManagement.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -325,29 +325,29 @@
     <Reference Include="SyntaxTree.VisualStudio.Unity.Bridge">
       <HintPath>C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Editor\SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Plastic.Newtonsoft.Json">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\Unity.Plastic.Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Plastic.Antlr3.Runtime">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\Unity.Plastic.Antlr3.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="log4netPlastic">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\log4netPlastic.dll</HintPath>
-    </Reference>
-    <Reference Include="unityplastic">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\unityplastic.dll</HintPath>
-    </Reference>
     <Reference Include="Mono.CecilX.Rocks">
       <HintPath>Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.Rocks.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Plastic.Newtonsoft.Json">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\Unity.Plastic.Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Mono.CecilX.Pdb">
       <HintPath>Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.Pdb.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Plastic.Antlr3.Runtime">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\Unity.Plastic.Antlr3.Runtime.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.CecilX">
       <HintPath>Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.dll</HintPath>
     </Reference>
+    <Reference Include="log4netPlastic">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\log4netPlastic.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.CecilX.Mdb">
       <HintPath>Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.Mdb.dll</HintPath>
+    </Reference>
+    <Reference Include="unityplastic">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\unityplastic.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2020.3.38f1\Editor\Data\NetStandard\ref\2.0.0\netstandard.dll</HintPath>
