--- a/Detached/SimpleWebTransport.csproj
+++ b/Detached/SimpleWebTransport.csproj
@@ -53,34 +53,34 @@
     <UnityVersion>2020.3.38f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
+    <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\Utils.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Client\StandAlone\ClientSslHelper.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\Message.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Client\Webgl\SimpleWebJSLib.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\BufferPool.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\MessageProcessor.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\SendLoop.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\SimpleWebTransport.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\Connection.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Client\StandAlone\WebSocketClientStandAlone.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Server\WebSocketServer.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Client\Webgl\WebSocketClientWebGl.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\MessageProcessor.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\ReceiveLoop.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\SslConfigLoader.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\SendLoop.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Client\StandAlone\ClientHandshake.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\Constants.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\ReadHelper.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Server\SimpleWebServer.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\EventType.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\Log.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Server\ServerHandshake.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Client\SimpleWebClient.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\TcpConfig.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\AssemblyInfo.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Server\ServerSslHelper.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\Utils.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Client\StandAlone\WebSocketClientStandAlone.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Server\WebSocketServer.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\ReceiveLoop.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Client\StandAlone\ClientHandshake.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Server\SimpleWebServer.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\EventType.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Server\ServerHandshake.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Client\StandAlone\ClientSslHelper.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Client\Webgl\SimpleWebJSLib.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\BufferPool.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\Constants.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\Log.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\Common\TcpConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Mirror\Runtime\Transports\SimpleWebTransport\SimpleWebTransport.asmdef" />
@@ -318,29 +318,29 @@
     <Reference Include="SyntaxTree.VisualStudio.Unity.Bridge">
       <HintPath>C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Editor\SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Plastic.Newtonsoft.Json">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\Unity.Plastic.Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Plastic.Antlr3.Runtime">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\Unity.Plastic.Antlr3.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="log4netPlastic">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\log4netPlastic.dll</HintPath>
-    </Reference>
-    <Reference Include="unityplastic">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\unityplastic.dll</HintPath>
-    </Reference>
     <Reference Include="Mono.CecilX.Rocks">
       <HintPath>Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.Rocks.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Plastic.Newtonsoft.Json">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\Unity.Plastic.Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Mono.CecilX.Pdb">
       <HintPath>Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.Pdb.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Plastic.Antlr3.Runtime">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\Unity.Plastic.Antlr3.Runtime.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.CecilX">
       <HintPath>Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.dll</HintPath>
     </Reference>
+    <Reference Include="log4netPlastic">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\log4netPlastic.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.CecilX.Mdb">
       <HintPath>Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.Mdb.dll</HintPath>
+    </Reference>
+    <Reference Include="unityplastic">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\unityplastic.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2020.3.38f1\Editor\Data\NetStandard\ref\2.0.0\netstandard.dll</HintPath>
