--- a/Detached/Telepathy.csproj
+++ b/Detached/Telepathy.csproj
@@ -53,25 +53,25 @@
     <UnityVersion>2020.3.38f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
+    <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\ThreadFunctions.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\Empty\Logger.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\EventType.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\Utils.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\Pool.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\Empty\Message.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\Empty\SafeQueue.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\Log.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\ConnectionState.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\NetworkStreamExtensions.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\Empty\ThreadExtensions.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\Empty\Logger.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\Common.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\MagnificentSendPipe.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\Server.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\NetworkStreamExtensions.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\ConnectionState.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\MagnificentReceivePipe.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\Empty\ThreadExtensions.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\Client.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\ThreadFunctions.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\EventType.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\Utils.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\Pool.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\Empty\SafeQueue.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\MagnificentReceivePipe.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Mirror\Runtime\Transports\Telepathy\Telepathy\Telepathy.asmdef" />
@@ -308,29 +308,29 @@
     <Reference Include="SyntaxTree.VisualStudio.Unity.Bridge">
       <HintPath>C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Editor\SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Plastic.Newtonsoft.Json">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\Unity.Plastic.Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Plastic.Antlr3.Runtime">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\Unity.Plastic.Antlr3.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="log4netPlastic">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\log4netPlastic.dll</HintPath>
-    </Reference>
-    <Reference Include="unityplastic">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\unityplastic.dll</HintPath>
-    </Reference>
     <Reference Include="Mono.CecilX.Rocks">
       <HintPath>Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.Rocks.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Plastic.Newtonsoft.Json">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\Unity.Plastic.Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Mono.CecilX.Pdb">
       <HintPath>Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.Pdb.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Plastic.Antlr3.Runtime">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\Unity.Plastic.Antlr3.Runtime.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.CecilX">
       <HintPath>Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.dll</HintPath>
     </Reference>
+    <Reference Include="log4netPlastic">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\log4netPlastic.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.CecilX.Mdb">
       <HintPath>Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.Mdb.dll</HintPath>
+    </Reference>
+    <Reference Include="unityplastic">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\unityplastic.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2020.3.38f1\Editor\Data\NetStandard\ref\2.0.0\netstandard.dll</HintPath>
