--- a/Detached/Unity.Mirror.CodeGen.csproj
+++ b/Detached/Unity.Mirror.CodeGen.csproj
@@ -53,49 +53,49 @@
     <UnityVersion>2020.3.38f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
+    <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Mirror\Editor\Weaver\Processors\SyncVarAttributeProcessor.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\Processors\SyncVarAttributeAccessReplacer.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\Resolvers.cs" />
     <Compile Include="Assets\Mirror\Editor\Weaver\Readers.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\EntryPoint\CompilationFinishedLogger.cs" />
     <Compile Include="Assets\Mirror\Editor\Weaver\Processors\SyncObjectInitializer.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\EntryPointILPostProcessor\ILPostProcessorAssemblyResolver.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\Processors\ReaderWriterProcessor.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\EntryPoint\CompilationFinishedHook.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\TypeReferenceComparer.cs" />
     <Compile Include="Assets\Mirror\Editor\Weaver\Processors\TargetRpcProcessor.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\Empty\SyncListProcessor.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\Processors\MethodProcessor.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\Empty\GenericArgumentResolver.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\EntryPoint\EnterPlayModeHook.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\EntryPointILPostProcessor\ILPostProcessorReflectionImporterProvider.cs" />
     <Compile Include="Assets\Mirror\Editor\Weaver\EntryPointILPostProcessor\ILPostProcessorReflectionImporter.cs" />
     <Compile Include="Assets\Mirror\Editor\Weaver\Empty\SyncDictionaryProcessor.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\AssemblyInfo.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\Weaver.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\WeaverTypes.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\Logger.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\EntryPointILPostProcessor\ILPostProcessorFromFile.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\Helpers.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\Processors\RpcProcessor.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\Processors\CommandProcessor.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\EntryPointILPostProcessor\CompiledAssemblyFromFile.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\Empty\Program.cs" />
     <Compile Include="Assets\Mirror\Editor\Weaver\EntryPointILPostProcessor\ILPostProcessorHook.cs" />
     <Compile Include="Assets\Mirror\Editor\Weaver\Processors\ServerClientAttributeProcessor.cs" />
     <Compile Include="Assets\Mirror\Editor\Weaver\Extensions.cs" />
     <Compile Include="Assets\Mirror\Editor\Weaver\Processors\NetworkBehaviourProcessor.cs" />
     <Compile Include="Assets\Mirror\Editor\Weaver\SyncVarAccessLists.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\Writers.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\EntryPointILPostProcessor\ILPostProcessorAssemblyResolver.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\EntryPoint\CompilationFinishedHook.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\Processors\MethodProcessor.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\AssemblyInfo.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\Weaver.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\WeaverTypes.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\Processors\CommandProcessor.cs" />
     <Compile Include="Assets\Mirror\Editor\Weaver\Processors\SyncObjectProcessor.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\WeaverExceptions.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\EntryPointILPostProcessor\ILPostProcessorLogger.cs" />
     <Compile Include="Assets\Mirror\Editor\Weaver\Empty\SyncEventProcessor.cs" />
     <Compile Include="Assets\Mirror\Editor\Weaver\Processors\MonoBehaviourProcessor.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\Processors\SyncVarAttributeAccessReplacer.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\Resolvers.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\Processors\ReaderWriterProcessor.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\TypeReferenceComparer.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\Empty\SyncListProcessor.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\EntryPoint\EnterPlayModeHook.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\Logger.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\Empty\Program.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\EntryPointILPostProcessor\ILPostProcessorLogger.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\EntryPoint\CompilationFinishedLogger.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\Empty\GenericArgumentResolver.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\EntryPointILPostProcessor\ILPostProcessorReflectionImporterProvider.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\EntryPointILPostProcessor\ILPostProcessorFromFile.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\Processors\RpcProcessor.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\Helpers.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\EntryPointILPostProcessor\CompiledAssemblyFromFile.cs" />
+    <Compile Include="Assets\Mirror\Editor\Weaver\WeaverExceptions.cs" />
     <Compile Include="Assets\Mirror\Editor\Weaver\Empty\MessageClassProcessor.cs" />
-    <Compile Include="Assets\Mirror\Editor\Weaver\Writers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Mirror\Editor\Weaver\Unity.Mirror.CodeGen.asmdef" />
