--- a/Detached/kcp2k.csproj
+++ b/Detached/kcp2k.csproj
@@ -53,27 +53,27 @@
     <UnityVersion>2020.3.38f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
+    <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\KcpServerConnection.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\NonAlloc\KcpClientConnectionNonAlloc.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\KcpServer.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\KcpConnection.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\NonAlloc\KcpServerNonAlloc.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\Extensions.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\KcpClientConnection.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\KcpClient.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\kcp\Pool.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\NonAlloc\KcpServerConnectionNonAlloc.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\kcp\Utils.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\KcpHeader.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\KcpServerConnection.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\NonAlloc\KcpClientConnectionNonAlloc.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\Extensions.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\kcp\AssemblyInfo.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\kcp\Segment.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\kcp\Kcp.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\KcpServer.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\KcpConnection.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\KcpClientConnection.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\KcpClient.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\KcpChannel.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\NonAlloc\KcpClientNonAlloc.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\KcpHeader.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\NonAlloc\KcpServerNonAlloc.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\kcp\Utils.cs" />
     <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\highlevel\Log.cs" />
-    <Compile Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\kcp\Kcp.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Mirror\Runtime\Transports\KCP\kcp2k\kcp2k.asmdef" />
@@ -310,29 +310,29 @@
     <Reference Include="SyntaxTree.VisualStudio.Unity.Bridge">
       <HintPath>C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Editor\SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Plastic.Newtonsoft.Json">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\Unity.Plastic.Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Plastic.Antlr3.Runtime">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\Unity.Plastic.Antlr3.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="log4netPlastic">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\log4netPlastic.dll</HintPath>
-    </Reference>
-    <Reference Include="unityplastic">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\unityplastic.dll</HintPath>
-    </Reference>
     <Reference Include="Mono.CecilX.Rocks">
       <HintPath>Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.Rocks.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Plastic.Newtonsoft.Json">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\Unity.Plastic.Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Mono.CecilX.Pdb">
       <HintPath>Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.Pdb.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Plastic.Antlr3.Runtime">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\Unity.Plastic.Antlr3.Runtime.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.CecilX">
       <HintPath>Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.dll</HintPath>
     </Reference>
+    <Reference Include="log4netPlastic">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\log4netPlastic.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.CecilX.Mdb">
       <HintPath>Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.Mdb.dll</HintPath>
+    </Reference>
+    <Reference Include="unityplastic">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.17.2\Lib\Editor\PlasticSCM\unityplastic.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2020.3.38f1\Editor\Data\NetStandard\ref\2.0.0\netstandard.dll</HintPath>
