--- a/Detached/.gitignore
+++ b/Detached/.gitignore
@@ -438,6 +438,8 @@ ExportedObj/
 *.booproj
 *.svd
 *.mdb
+Detached/Library/ArtifactDB
+Detached/Library/SourceAssetDB
 
 # Unity3D generated meta files
 *.pidb.meta
